tests/transpiler/x/hs/values_builtin.error
run: exit status 1

/workspace/mochi/tests/transpiler/x/hs/values_builtin.hs:19:22: error:
    • Couldn't match expected type ‘Map.Map k0 a0’
                  with actual type ‘GenType1’
    • In the first argument of ‘Map.elems’, namely ‘m’
      In the first argument of ‘print’, namely ‘(Map.elems m)’
      In a stmt of a 'do' block: print (Map.elems m)
   |
19 |     print (Map.elems m)
   |                      ^
